--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Document</title>
+    <title>4-dars</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="top">
+          <p class="skidka">
+            Скидка 10% по промокоду “ZAMOK” на все заказы до 10.09
+          </p>
+        </div>
+        <div class="head">
+          <img class="gs" src="images/Logo.svg" alt="" />
+          <div class="linkdiv">
+            <ul class="link1">
+              <li><a href="#">Главная</a></li>
+              <li>
+                <a href="#">Каталог </a> <img src="images/strelka.svg" alt="" />
+              </li>
+              <li><a href="#">Оптовая продажа</a></li>
+              <li><a href="#">О нас</a></li>
+            </ul>
+          </div>
+          <img class="phoneicon" src="images/phone-call 1.svg" alt="" />
+          <a class="number" href="#">+7 (966) 55 88 499</a>
+          <img src="images/heart.svg" alt="" />
+          <img src="images/shop.svg" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
