--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <p class="skidka">
             Скидка 10% по промокоду “ZAMOK” на все заказы до 10.09
           </p>
+          <a class="zvonok" href="#">Обратный звонок</a>
         </div>
         <div class="head">
           <img class="gs" src="images/Logo.svg" alt="" />
@@ -20,7 +21,7 @@
             <ul class="link1">
               <li><a href="#">Главная</a></li>
               <li>
-                <a href="#">Каталог </a> <img src="images/strelka.svg" alt="" />
+                <a href="#">Каталог <img src="images/strelka.svg" alt="" /></a>
               </li>
               <li><a href="#">Оптовая продажа</a></li>
               <li><a href="#">О нас</a></li>
@@ -28,8 +29,11 @@
           </div>
           <img class="phoneicon" src="images/phone-call 1.svg" alt="" />
           <a class="number" href="#">+7 (966) 55 88 499</a>
-          <img src="images/heart.svg" alt="" />
-          <img src="images/shop.svg" alt="" />
+          <div class="icon1">
+            <img src="images/heart.svg" alt="" />
+            <img src="images/shop.svg" alt="" />
+          </div>
+          <div class="line"></div>
         </div>
       </div>
     </div>
