--- a/index.html
+++ b/index.html
@@ -36,6 +36,66 @@
           <div class="line"></div>
         </div>
       </div>
+      <div class="h4">
+        <div class="glca">
+          <h4 class="glavniy">Главная /</h4>
+          <h4 class="catalog">Каталог</h4>
+        </div>
+        <div class="nak">
+          <h2 class="nakleyka">Накладные электронные замки</h2>
+          <h3 class="soni">(854)</h3>
+        </div>
+      </div>
+      <div>
+        <div class="boxs">
+          <div class="box1">
+            <p class="sbrosit">Сбросить фильтры</p>
+          </div>
+          <div class="elekt">
+            <p class="elektr">Электронные кодовые замки</p>
+            <img class="x" src="images/Cross.svg" alt="" />
+          </div>
+          <div class="pop">
+            <p class="populyar">Популярности</p>
+            <img class="strelka" src="images/strelka.svg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="mainleft">
+        <h2 class="filtr">Фильтр</h2>
+
+        <div class="narxlar">
+          <h4 class="narx">Цена</h4>
+          <img src="images/strelka2.svg" alt="" />
+        </div>
+        <div class="narxi">
+          <div class="narx-79">
+            <p>79 000 |</p>
+          </div>
+          <div class="narx-24"><p>24 500₽</p></div>
+        </div>
+        <div class="chiziq1"></div>
+        <div class="osob">
+          <p class="osoben">Особенности</p>
+          <img src="images/strelka.svg" alt="" />
+        </div>
+        <div class="chiziq1"></div>
+        <div class="svet">
+          <p class="osoben">Цвет</p>
+          <img src="images/strelka.svg" alt="" />
+        </div>
+        <div class="chiziq1"></div>
+        <div class="material">
+          <p class="osoben">Материал</p>
+          <img src="images/strelka.svg" alt="" />
+        </div>
+        <div class="chiziq1"></div>
+        <div class="razmer">
+          <p class="osoben">Размеры</p>
+          <img src="images/strelka.svg" alt="" />
+        </div>
+        <div class="chiziq1"></div>
+      </div>
     </div>
   </body>
 </html>
