--- a/index.html
+++ b/index.html
@@ -61,40 +61,232 @@
           </div>
         </div>
       </div>
-      <div class="mainleft">
-        <h2 class="filtr">Фильтр</h2>
+      <div class="main">
+        <div class="mainleft">
+          <h2 class="filtr">Фильтр</h2>
 
-        <div class="narxlar">
-          <h4 class="narx">Цена</h4>
-          <img src="images/strelka2.svg" alt="" />
-        </div>
-        <div class="narxi">
-          <div class="narx-79">
-            <p>79 000 |</p>
+          <div class="narxlar">
+            <h4 class="narx">Цена</h4>
+            <img class="strelka" src="images/strelka2.svg" alt="" />
           </div>
-          <div class="narx-24"><p>24 500₽</p></div>
+          <div class="narxi">
+            <div class="narx-79">
+              <p>79 000 |</p>
+            </div>
+            <div class="narx-24"><p>24 500₽</p></div>
+          </div>
+          <div class="chiziq1"></div>
+          <div class="osob">
+            <p class="osoben">Особенности</p>
+            <img class="strelka" src="images/strelka.svg" alt="" />
+          </div>
+          <div class="chiziq1"></div>
+          <div class="svet">
+            <p class="osoben">Цвет</p>
+            <img class="strelka" src="images/strelka.svg" alt="" />
+          </div>
+          <div class="chiziq1"></div>
+          <div class="material">
+            <p class="osoben">Материал</p>
+            <img class="strelka" src="images/strelka.svg" alt="" />
+          </div>
+          <div class="chiziq1"></div>
+          <div class="razmer">
+            <p class="osoben">Размеры</p>
+            <img class="strelka" src="images/strelka.svg" alt="" />
+          </div>
+          <div class="chiziq1"></div>
         </div>
-        <div class="chiziq1"></div>
-        <div class="osob">
-          <p class="osoben">Особенности</p>
-          <img src="images/strelka.svg" alt="" />
+        <div class="mainright">
+          <div class="mainfirst">
+            <div>
+              <img class="top1" src="images/top1.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Вариативный замок Golden Soft для отеля</p>
+                <div class="narx7">
+                  <p class="p7">7 000₽</p>
+                  <p class="p8">8 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="second">
+              <img class="top1" src="images/top2.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">33 000₽</p>
+                  <p class="p39">39 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="third">
+              <img class="top1" src="images/top3.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">9 000₽</p>
+                  <p class="p39">12 000₽</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mainfirst">
+            <div>
+              <img class="top1" src="images/top1.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Вариативный замок Golden Soft для отеля</p>
+                <div class="narx7">
+                  <p class="p7">7 000₽</p>
+                  <p class="p8">8 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="second">
+              <img class="top1" src="images/top2.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">33 000₽</p>
+                  <p class="p39">39 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="third">
+              <img class="top1" src="images/top3.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">9 000₽</p>
+                  <p class="p39">12 000₽</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mainfirst">
+            <div>
+              <img class="top1" src="images/top1.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Вариативный замок Golden Soft для отеля</p>
+                <div class="narx7">
+                  <p class="p7">7 000₽</p>
+                  <p class="p8">8 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="second">
+              <img class="top1" src="images/top2.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">33 000₽</p>
+                  <p class="p39">39 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="third">
+              <img class="top1" src="images/top3.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">9 000₽</p>
+                  <p class="p39">12 000₽</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mainfirst">
+            <div>
+              <img class="top1" src="images/top1.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Вариативный замок Golden Soft для отеля</p>
+                <div class="narx7">
+                  <p class="p7">7 000₽</p>
+                  <p class="p8">8 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="second">
+              <img class="top1" src="images/top2.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">33 000₽</p>
+                  <p class="p39">39 000₽</p>
+                </div>
+              </div>
+            </div>
+            <div class="third">
+              <img class="top1" src="images/top3.png" alt="" />
+              <div class="reting">
+                <div class="reytings">
+                  <img src="images/reyting.svg" alt="" />
+                  <p class="otziv">(12) отзывов</p>
+                </div>
+                <p class="variant">Дверной Замок Golden Soft для офиса</p>
+                <div class="narx7">
+                  <p class="p33">9 000₽</p>
+                  <p class="p39">12 000₽</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="chiziq1"></div>
-        <div class="svet">
-          <p class="osoben">Цвет</p>
-          <img src="images/strelka.svg" alt="" />
-        </div>
-        <div class="chiziq1"></div>
-        <div class="material">
-          <p class="osoben">Материал</p>
-          <img src="images/strelka.svg" alt="" />
-        </div>
-        <div class="chiziq1"></div>
-        <div class="razmer">
-          <p class="osoben">Размеры</p>
-          <img src="images/strelka.svg" alt="" />
-        </div>
-        <div class="chiziq1"></div>
+      </div>
+      <div class="footer">
+        <img class="strelka" src="images/Icon.svg" alt="" />
+        <button class="btn1">1</button>
+        <button class="btn2">2</button>
+        <button class="btn2">4</button>
+        <button class="btn2">5</button>
+        <button class="btn2">6</button>
+        <button class="btn2">7</button>
+        <button class="btn2">...</button>
+        <button class="btn2">15</button>
+        <img class="strelka" src="images/icon (1).svg" alt="" />
       </div>
     </div>
   </body>
