--- a/index.html
+++ b/index.html
@@ -288,6 +288,172 @@
         <button class="btn2">15</button>
         <img class="strelka" src="images/icon (1).svg" alt="" />
       </div>
+      <div class="main-bottom">
+        <div class="prsm">
+          <h3 class="prosmotr">Вы недавно просмотрели</h3>
+          <img src="images/arrows.svg" alt="" />
+        </div>
+        <div class="photo__bottom">
+          <div>
+            <img src="images/top4.png" alt="" />
+            <p class="variant">Дверной Замок Golden Soft для офиса</p>
+            <div class="narx7">
+              <p class="p33">33 000₽</p>
+              <p class="p39">37 000₽</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/top1.png" alt="" />
+            <p class="variant">Дверной Замок Golden Soft для офиса</p>
+            <div class="narx7">
+              <p class="p33">7 000₽</p>
+              <p class="p39">8 000₽</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/top2.png" alt="" />
+            <p class="variant">Дверной Замок Golden Soft для офиса</p>
+            <div class="narx7">
+              <p class="p33">33 000₽</p>
+              <p class="p39">39 000₽</p>
+            </div>
+          </div>
+          <div>
+            <img src="images/top3.png" alt="" />
+            <p class="variant">Дверной Замок Golden Soft для офиса</p>
+            <div class="narx7">
+              <p class="p33">9 000₽</p>
+              <p class="p39">12 000₽</p>
+            </div>
+          </div>
+        </div>
+        <div class="about">
+          <div>
+            <h2 class="eget">Eget quis quam metus, scelerisque.</h2>
+            <p class="odio">
+              Odio felis sit leo, massa, mauris, at pulvinar ultrices. Eu
+              porttitor molestie massa porttitor. Quisque at turpis ut proin eu
+              et magna etiam rhoncus.
+            </p>
+            <div class="checked">
+              <div>
+                <input type="checkbox" name="" id="check" placeholder="" />
+                <input type="checkbox" name="" id="check" />
+              </div>
+              <div>
+                <input type="checkbox" name="" id="check" />
+                <p>Межкомнатую дверь</p>
+                <input type="checkbox" name="" id="check" />
+                <p>Межкомнатую дверь</p>
+              </div>
+            </div>
+            <p class="ac">
+              Ac risus neque pulvinar tincidunt est. Tristique imperdiet viverra
+              interdum in leo. Nullam ullamcorper id enim fermentum integer
+              praesent bibendum. In ullamcorper purus scelerisque malesuada et
+              egestas. Ac dictumst mauris sed facilisis.
+            </p>
+          </div>
+          <img
+            class="zamok"
+            src="images/white-2-storey-house-near-trees-1115804.png"
+            alt=""
+          />
+        </div>
+        <div class="about-2">
+          <img
+            class="imag"
+            src="images/white-2-storey-house-near-trees-1115804 (1).png"
+            alt=""
+          />
+          <div>
+            <h3 class="eget">Eget quis quam metus, scelerisque.</h3>
+            <p class="odio">
+              Odio felis sit leo, massa, mauris, at pulvinar ultrices. Eu
+              porttitor molestie massa porttitor. Quisque at turpis ut proin eu
+              et magna etiam rhoncus.
+            </p>
+            <p class="ac">
+              Ac risus neque pulvinar tincidunt est. Tristique imperdiet viverra
+              interdum in leo. Nullam ullamcorper id enim fermentum integer
+              praesent bibendum. In ullamcorper purus scelerisque malesuada et
+              egestas. Ac dictumst mauris sed facilisis.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- footer -->
+      <div class="footer2">
+        <div class="box">
+          <h2 class="perezvonim">Мы Вам перезвоним</h2>
+          <p class="esli">
+            Если у вас возникли какие-то вопросы или проблемы, заполните форму и
+            мы Вам перезвоним.
+          </p>
+          <div class="foot-input">
+            <input class="nom" type="text" placeholder="Ваше имя" />
+            <input class="nom" type="text" placeholder="Ваш Email" />
+            <button class="junatmoq">Отправить</button>
+          </div>
+        </div>
+        <div class="foot">
+          <div class="logo">
+            <img src="images/Logo (1).svg" alt="" />
+            <div class="app">
+              <a href="#"><img src="images/vk.svg" alt="" /></a>
+              <a href="#"><img src="images/twitter.svg" alt="" /></a>
+              <a href="#"
+                ><img src="images/free-icon-facebook-2111392 1.svg" alt=""
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <h3 class="navigatsiya">Навигация</h3>
+            <ul class="foot-link">
+              <li><a href="#">Главная</a></li>
+              <li>
+                <a href="#">Каталог</a>
+              </li>
+              <li><a href="#">Оптовая продажа</a></li>
+              <li><a href="#">О нас</a></li>
+            </ul>
+          </div>
+          <div class="quti2">
+            <h3 class="navigatsiya2">Наши контакты</h3>
+            <ul class="foot-link2">
+              <li><a class="telefon" href="#">Телефоны</a></li>
+              <li>
+                <a href="#">+7 (988) 565 00 38</a>
+              </li>
+              <li><a href="#">+375 33 662 82 56</a></li>
+              <li><a class="telefon" href="#">Email</a></li>
+              <li><a href="#">vladpertcev@mail.ru </a></li>
+              <li><a href="#"> korobko416@gmail.com</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="navigatsiya2">Наш адрес</h3>
+            <ul class="foot-link2">
+              <li>
+                <a class="rossiya" href="#"
+                  >Россия, Ростов-на-Дону ул. Богачева, 16</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="">
+            <h3 class="navigatsiya2">Информация</h3>
+            <ul class="foot-link2">
+              <li><a href="#">Доставка и оплата</a></li>
+              <li>
+                <a href="#">Гарантии </a>
+              </li>
+              <li><a href="#">Возврат товара</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
