--- a/index.html
+++ b/index.html
@@ -337,14 +337,24 @@
             </p>
             <div class="checked">
               <div>
-                <input type="checkbox" name="" id="check" placeholder="" />
-                <input type="checkbox" name="" id="check" />
+                <div class="chek1">
+                  <input type="checkbox" name="" id="check" placeholder="" />
+                  <p>Межкомнатую дверь</p>
+                </div>
+                <div class="chek">
+                  <input type="checkbox" name="" id="check" />
+                  <p>Деревянную дверь</p>
+                </div>
               </div>
               <div>
-                <input type="checkbox" name="" id="check" />
-                <p>Межкомнатую дверь</p>
-                <input type="checkbox" name="" id="check" />
-                <p>Межкомнатую дверь</p>
+                <div class="chek1">
+                  <input class="derev" type="checkbox" name="" id="check" />
+                  <p>Межкомнатую дверь</p>
+                </div>
+                <div class="chek">
+                  <input class="derev" type="checkbox" name="" id="check" />
+                  <p>Деревянную дверь</p>
+                </div>
               </div>
             </div>
             <p class="ac">
@@ -392,6 +402,7 @@
           </p>
           <div class="foot-input">
             <input class="nom" type="text" placeholder="Ваше имя" />
+
             <input class="nom" type="text" placeholder="Ваш Email" />
             <button class="junatmoq">Отправить</button>
           </div>
@@ -452,6 +463,10 @@
               <li><a href="#">Возврат товара</a></li>
             </ul>
           </div>
+        </div>
+        <div>
+          <div class="foot-line"></div>
+          <p class="golden">© 2021 Golden Soft All rights reserved.</p>
         </div>
       </div>
     </div>
